# book_pavilion

./: .gitignore  README_OCR.md  check_setup.py  doubao_ocr_converter.py  pdf_ocr_converter.py  pyproject.toml  test_ocr.py
data/: NLC511-004031011023755-34557_駢文通義_book_data.json
data/叙事的本质/json/: 叙事的本质_book_data.json
